--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -1,68 +1,54 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui ="http://java.sun.com/jsf/facelets"
-	  xmlns:p="http://primefaces.org/ui"
-	  xmlns:h="http://java.sun.com/jsf/html">
-    <ui:composition template="/WEB-INF/template/app.xhtml" >
-		<ui:define name="menubar">
-			<div class="control">
-				<div style="float:left;">
-					<p:commandButton id="back" icon="ui-icon ui-icon-plus" value="กระดาน"
-									 styleClass="btn btn-mini btn-info"
-									 onclick="window.location.href='#{request.contextPath}/fboard';" />
-				</div>
+<ui:composition template="/WEB-INF/template/app.xhtml"
+				xmlns="http://www.w3.org/1999/xhtml"
+				xmlns:p="http://primefaces.org/ui"
+				xmlns:h="http://xmlns.jcp.org/jsf/html"
+				xmlns:f="http://xmlns.jcp.org/jsf/core"
+				xmlns:ui="http://xmlns.jcp.org/jsf/facelets" >
+
+	<ui:define name="menubar">
+		<div class="control">
+			<div style="float:left;">
+				<p:commandButton id="back" icon="ui-icon ui-icon-plus" value="กระดาน"
+								 styleClass="btn btn-mini btn-info"
+								 onclick="window.location.href = '#{request.contextPath}/fboard';" />
 			</div>
-		</ui:define>
-        <ui:define name="content">
-			<table class="table">
-				<thead>
+		</div>
+	</ui:define>
+	<ui:define name="content">
+		<style type="text/css">
+			.ui-widget-content {
+				border: 0px;
+				background: none;
+			}
+		</style>
+		<table class="table">
+			<tbody>
+				<ui:repeat var="b" value="#{dashboard.boardaccounts}">
 					<tr>
-						<th style="width: 24px;"></th>
-						<th>NO</th>
-						<th>NAME</th>
-						<th>Description</th>
-						<th>Created</th>
-						<th></th>
+						<td style="width: 340px;">
+							<p:panel>
+								<p:lineChart id="burndown" value="#{dashboard.burndown(b)}"
+											 style="height:128px; width: 320px;"
+											 minY="0" minX="0" />
+							</p:panel>
+						</td>
+						<td>
+							<b>#{b.board.boardname}</b> #{b.board.description}
+							<br /><br />
+							#{b.board.created}<br /><br />
+
+							<h:outputLink value="grant/#{b.board.id}"  style="padding-right: 24px;">
+								<i class="icon-group" style="font-size: 2em;"></i></h:outputLink>
+
+							<h:outputLink value="fboard/#{b.board.id}" style="padding-right: 24px;">
+								<i class="icon-edit" style="font-size: 2em;"></i></h:outputLink>
+
+							<h:outputLink value="board/#{b.board.id}" >
+								<i class="icon-list-alt" style="font-size: 2em;"></i></h:outputLink>
+						</td>
 					</tr>
-				</thead>
-				<tbody>
-					<ui:repeat var="b" value="#{dashboard.boardaccounts}">
-						<tr>
-							<td></td>
-							<td>#{b.board.id}</td>
-							<td>#{b.board.boardname}</td>
-							<td>#{b.board.description}</td>
-							<td>#{b.board.created}</td>
-							<td>
-								<h:outputLink value="grant/#{b.board.id}"  style="padding-right: 24px;">
-									<i class="icon-group" style="font-size: 2em;"></i></h:outputLink>
-
-								<h:outputLink value="fboard/#{b.board.id}" style="padding-right: 24px;">
-									<i class="icon-edit" style="font-size: 2em;"></i></h:outputLink>
-
-								<h:outputLink value="board/#{b.board.id}" >
-									<i class="icon-list-alt" style="font-size: 2em;"></i></h:outputLink>
-
-								<ui:remove>
-									<p:commandButton id="grantAccount" style="margin-right: 12px;"
-												 icon="ui-icon ui-icon-person"
-												 styleClass="btn btn-mini btn-info"
-												 onclick="window.location.href='#{request.contextPath}/grant/#{b.id}';" />
-									<p:commandButton id="editProjet" style="margin-right: 12px;"
-													 icon="ui-icon ui-icon-disk"
-													 styleClass="btn btn-mini btn-info"
-													 onclick="window.location.href='#{request.contextPath}/fboard/#{b.id}';" />
-									<p:commandButton id="linkToBoard"
-													 icon="ui-icon ui-icon-arrowthick-1-e"
-													 styleClass="btn btn-mini btn-info"
-													 onclick="window.location.href='#{request.contextPath}/board/#{b.id}';" />
-								</ui:remove>
-							</td>
-						</tr>
-					</ui:repeat>
-				</tbody>
-			</table>
-        </ui:define>
-    </ui:composition>
-</html>
+				</ui:repeat>
+			</tbody>
+		</table>
+	</ui:define>
+</ui:composition>
