--- a/src/main/webapp/fboard.xhtml
+++ b/src/main/webapp/fboard.xhtml
@@ -1,91 +1,89 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui ="http://java.sun.com/jsf/facelets"
-	  xmlns:p="http://primefaces.org/ui" >
-    <ui:composition template="/WEB-INF/template/app.xhtml" >
-		<ui:define name="menubar">
-			<div class="control" >
-				<div style="float:left;">
-					<p:commandButton id="back" icon="ui-icon ui-icon-arrowthick-1-w" value="กลับ"
-									 styleClass="btn btn-mini btn-info"
-									 onclick="window.location.href = '#{request.contextPath}/dashboard';" />
-				</div>
+<ui:composition template="/WEB-INF/template/app.xhtml"
+				xmlns="http://www.w3.org/1999/xhtml"
+				xmlns:ui ="http://java.sun.com/jsf/facelets"
+				xmlns:p="http://primefaces.org/ui" >
+
+	<ui:define name="menubar">
+		<div class="control" >
+			<div style="float:left;">
+				<p:commandButton id="back" icon="ui-icon ui-icon-arrowthick-1-w" value="กลับ"
+								 styleClass="btn btn-mini btn-info"
+								 onclick="window.location.href = '#{request.contextPath}/dashboard';" />
 			</div>
-		</ui:define>
-        <ui:define name="content">
-			<p:messages id="msgs" showDetail="true" showSummary="true" closable="true" globalOnly="true" />
-			<div class="container">
-				<div class="span12">
-					<div class="row">
-						<div class="controls span6">
-							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
-								<span class="add-on"><i class="icon-pushpin" ></i></span>
-								<p:inputText id="boardid" style="width: 480px;" disabled="true"
-											 value="#{fboard.board.id}"/>
-								<p:watermark for="boardid" value="BOARD: " ></p:watermark>
-							</div>
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="controls span6">
-							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
-								<span class="add-on"><i class="icon-pencil" ></i></span>
-								<p:inputText id="boardname" style="width: 480px;"
-											 value="#{fboard.board.boardname}" required="true"
-											 requiredMessage="Mandatory Field." >
-								</p:inputText>
-								<p:watermark for="boardname" value="ชื่อกระดาน" ></p:watermark>
-							</div>
-						</div>
-						<div class="span4">
-							<p:message id="boardnameMsg" for="boardname"
-									   showDetail="true" showSummary="false" display="text" />
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="controls span6">
-							<div style="padding-bottom: 24px; padding-left: 24px; float:left;">
-								<p:inputTextarea id="description" style="width: 510px;" rows="6"
-												 value="#{fboard.board.description}"/>
-								<p:watermark for="description" value="รายละเอียด" />
-							</div>
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="span6">
-							<div class="controls">
-								<div style="padding-bottom: 48px; padding-left: 24px; float:left;">
-									<p:commandButton id="remove" icon="ui-icon ui-icon-closethick" value="ลบ"
-													 styleClass="btn btn-mini btn-danger" update="msgs"
-													 rendered="#{!fboard.newBoard}"
-													 onclick="confirmation.show();" />
-								</div>
-							</div>
-							<div class="controls">
-								<div style="float:right;">
-									<p:commandButton id="save" icon="ui-icon ui-icon-check" value="บันทึก"
-													 styleClass="btn btn-mini btn-success" update="msgs"
-													 action="#{fboard.save}"/>
-								</div>
-							</div>
+		</div>
+	</ui:define>
+	<ui:define name="content">
+		<p:messages id="msgs" showDetail="true" showSummary="true" closable="true" globalOnly="true" />
+		<div class="container">
+			<div class="span12">
+				<div class="row">
+					<div class="controls span6">
+						<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
+							<span class="add-on"><i class="icon-pushpin" ></i></span>
+							<p:inputText id="boardid" style="width: 480px;" disabled="true"
+										 value="#{fboard.board.id}"/>
+							<p:watermark for="boardid" value="BOARD: " ></p:watermark>
 						</div>
 					</div>
 				</div>
+
+				<div class="row">
+					<div class="controls span6">
+						<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
+							<span class="add-on"><i class="icon-pencil" ></i></span>
+							<p:inputText id="boardname" style="width: 480px;"
+										 value="#{fboard.board.boardname}" required="true"
+										 requiredMessage="Mandatory Field." >
+							</p:inputText>
+							<p:watermark for="boardname" value="ชื่อกระดาน" ></p:watermark>
+						</div>
+					</div>
+					<div class="span4">
+						<p:message id="boardnameMsg" for="boardname"
+								   showDetail="true" showSummary="false" display="text" />
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="controls span6">
+						<div style="padding-bottom: 24px; padding-left: 24px; float:left;">
+							<p:inputTextarea id="description" style="width: 510px;" rows="6"
+											 value="#{fboard.board.description}"/>
+							<p:watermark for="description" value="รายละเอียด" />
+						</div>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="span6">
+						<div class="controls">
+							<div style="padding-bottom: 48px; padding-left: 24px; float:left;">
+								<p:commandButton id="remove" icon="ui-icon ui-icon-closethick" value="ลบ"
+												 styleClass="btn btn-mini btn-danger" update="msgs"
+												 rendered="#{!fboard.newBoard}"
+												 onclick="confirmation.show();" />
+							</div>
+						</div>
+						<div class="controls">
+							<div style="float:right;">
+								<p:commandButton id="save" icon="ui-icon ui-icon-check" value="บันทึก"
+												 styleClass="btn btn-mini btn-success" update="msgs"
+												 action="#{fboard.save}"/>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
+		</div>
 
-			<p:confirmDialog id="confirmDialog" message="Are you sure about destroying this board?"
-							 header="Confirm Dialog" severity="alert" widgetVar="confirmation">
+		<p:confirmDialog id="confirmDialog" message="Are you sure about destroying this board?"
+						 header="Confirm Dialog" severity="alert" widgetVar="confirmation">
 
-				<p:commandButton id="confirm" value="Yes Sure" oncomplete="confirmation.hide()"
-								 action="#{fboard.remove}" />
+			<p:commandButton id="confirm" value="Yes Sure" oncomplete="confirmation.hide()"
+							 action="#{fboard.remove}" />
 
-				<p:commandButton id="decline" value="Not Yet" onclick="confirmation.hide();" type="button" />
+			<p:commandButton id="decline" value="Not Yet" onclick="confirmation.hide();" type="button" />
 
-			</p:confirmDialog>
-        </ui:define>
-    </ui:composition>
-</html>
+		</p:confirmDialog>
+	</ui:define>
+</ui:composition>
