--- a/src/main/webapp/grant.xhtml
+++ b/src/main/webapp/grant.xhtml
@@ -1,91 +1,89 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui ="http://java.sun.com/jsf/facelets"
-	  xmlns:p="http://primefaces.org/ui"
-	  xmlns:f="http://java.sun.com/jsf/core"
-	  xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <ui:composition template="/WEB-INF/template/app.xhtml" >
-		<ui:define name="menubar">
-			<div class="control" >
-				<div style="float:left;">
-					<p:commandButton id="back" icon="ui-icon ui-icon-arrowthick-1-w" value="Back"
-									 styleClass="btn btn-mini btn-info"
-									 onclick="window.location.href = '#{request.contextPath}/dashboard';" />
-				</div>
+<ui:composition template="/WEB-INF/template/app.xhtml"
+				xmlns="http://www.w3.org/1999/xhtml"
+				xmlns:ui ="http://java.sun.com/jsf/facelets"
+				xmlns:p="http://primefaces.org/ui"
+				xmlns:f="http://java.sun.com/jsf/core"
+				xmlns:h="http://xmlns.jcp.org/jsf/html">
+
+	<ui:define name="menubar">
+		<div class="control" >
+			<div style="float:left;">
+				<p:commandButton id="back" icon="ui-icon ui-icon-arrowthick-1-w" value="Back"
+								 styleClass="btn btn-mini btn-info"
+								 onclick="window.location.href = '#{request.contextPath}/dashboard';" />
 			</div>
-		</ui:define>
-        <ui:define name="content">
-			<p:messages id="msgs" />
-			<div class="container">
-				<div style="width: 511px;">
-					<div class="row" >
-						<div class="controls">
-							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
-								<span class="add-on"><i class="icon-user"></i></span>
-								<p:autoComplete id="accountbox" value="#{grant.accountname}"
-												completeMethod="#{grant.findAccounts}" var="a"
-												itemLabel="#{a.displayname}" itemValue="#{a}"
-												minQueryLength="4" converter="DefaultConverter" forceSelection="true" >
-									<f:attribute name="listArrtibute" value="#{grant.accounts}" />
-									<p:ajax event="itemSelect" listener="#{grant.handleSelect}"
-											update="accountbox grants" />
-								</p:autoComplete>
-								<p:watermark for="accountbox" value="Name or Email" />
-							</div>
+		</div>
+	</ui:define>
+	<ui:define name="content">
+		<p:messages id="msgs" />
+		<div class="container">
+			<div style="width: 511px;">
+				<div class="row" >
+					<div class="controls">
+						<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
+							<span class="add-on"><i class="icon-user"></i></span>
+							<p:autoComplete id="accountbox" value="#{grant.accountname}"
+											completeMethod="#{grant.findAccounts}" var="a"
+											itemLabel="#{a.displayname}" itemValue="#{a}"
+											minQueryLength="4" converter="DefaultConverter" forceSelection="true" >
+								<f:attribute name="listArrtibute" value="#{grant.accounts}" />
+								<p:ajax event="itemSelect" listener="#{grant.handleSelect}"
+										update="accountbox grants" />
+							</p:autoComplete>
+							<p:watermark for="accountbox" value="Name or Email" />
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
 
-			<p:outputPanel id="grants" styleClass="span8">
-				<table class="table">
-					<thead>
+		<p:outputPanel id="grants" styleClass="span8">
+			<table class="table">
+				<thead>
+					<tr>
+						<th class="span1">Account</th>
+						<th class="span2">Name</th>
+						<th class="span2"></th>
+					</tr>
+				</thead>
+				<tbody>
+					<ui:repeat var="a" value="#{grant.grants}">
 						<tr>
-							<th class="span1">Account</th>
-							<th class="span2">Name</th>
-							<th class="span2"></th>
+							<td>#{a.account.username}</td>
+							<td>
+								<h:outputText value="(Owner)" style="color: red;"
+											  rendered="#{a.permissionid == 'O'}" />
+								#{a.account.firstname} #{a.account.lastname}
+							</td>
+							<td>
+								<p:selectOneButton value="#{a.permissionid}"
+												   disabled="#{a.account.id == account.account.id}" >
+									<f:attribute  name="accountid" value="#{a.account.id}" />
+									<f:selectItem itemLabel="Read"  itemValue="R" />
+									<f:selectItem itemLabel="Write" itemValue="W" />
+									<f:selectItem itemLabel="Admin" itemValue="A" />
+									<p:ajax listener="#{grant.changePermission}" />
+								</p:selectOneButton>
+							</td>
 						</tr>
-					</thead>
-					<tbody>
-						<ui:repeat var="a" value="#{grant.grants}">
-							<tr>
-								<td>#{a.account.username}</td>
-								<td>
-									<h:outputText value="(Owner)" style="color: red;"
-												  rendered="#{a.permissionid == 'O'}" />
-									#{a.account.firstname} #{a.account.lastname}
-								</td>
-								<td>
-									<p:selectOneButton value="#{a.permissionid}"
-													   disabled="#{a.account.id == account.account.id}" >
-										<f:attribute  name="accountid" value="#{a.account.id}" />
-										<f:selectItem itemLabel="Read"  itemValue="R" />
-										<f:selectItem itemLabel="Write" itemValue="W" />
-										<f:selectItem itemLabel="Admin" itemValue="A" />
-										<p:ajax listener="#{grant.changePermission}" />
-									</p:selectOneButton>
-								</td>
-							</tr>
-						</ui:repeat>
-					</tbody>
-				</table>
-			</p:outputPanel>
+					</ui:repeat>
+				</tbody>
+			</table>
+		</p:outputPanel>
 
-			<ui:remove>
-				<div class="row">
-					<div style="padding-bottom: 24px; padding-left: 24px; float:left;">
-						<p:selectOneMenu  id="selectedOwner"
-										  value="" >
-							<f:converter converterId="DefaultConverter" />
-							<f:attribute name="listArrtibute" value="storyManaged" />
-							<f:selectItems value="" var="a"
-										   itemValue="#{a}"
-										   itemLabel="#{a}" />
-						</p:selectOneMenu>
-					</div>
+		<ui:remove>
+			<div class="row">
+				<div style="padding-bottom: 24px; padding-left: 24px; float:left;">
+					<p:selectOneMenu  id="selectedOwner"
+									  value="" >
+						<f:converter converterId="DefaultConverter" />
+						<f:attribute name="listArrtibute" value="storyManaged" />
+						<f:selectItems value="" var="a"
+									   itemValue="#{a}"
+									   itemLabel="#{a}" />
+					</p:selectOneMenu>
 				</div>
-			</ui:remove>
-        </ui:define>
-    </ui:composition>
-</html>
+			</div>
+		</ui:remove>
+	</ui:define>
+</ui:composition>
