Fixed Bug & Fixed Test & Implement EmailFacade

--- a/src/main/webapp/register.xhtml
+++ b/src/main/webapp/register.xhtml
@@ -7,70 +7,72 @@
 
     <ui:composition template="/WEB-INF/template/base.xhtml" >
 		<ui:define name="content">
-			<!-- Page Title -->
-			<div class="page-title">
-				<div class="container">
+			UNDER CONSTRUCTION
+			<ui:remove>
+				<!-- Page Title -->
+				<div class="page-title">
+					<div class="container">
+						<div class="row">
+							<div class="span12">
+								<i class="icon-envelope-alt page-title-icon"></i>
+								<h2>Register /</h2>
+								<p>Run your work with us.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Contact Us -->
+				<div class="contact-us container">
 					<div class="row">
-						<div class="span12">
-							<i class="icon-envelope-alt page-title-icon"></i>
-							<h2>Register /</h2>
-							<p>Run your work with us.</p>
+						<div class="controls">
+							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
+								<span class="add-on"><i class="icon-pencil" ></i></span>
+								<p:inputText id="username" style="width: 480px;" >
+									<f:validateRequired />
+								</p:inputText>
+								<p:watermark for="username" value="Username" ></p:watermark>
+							</div>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="controls">
+							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
+								<span class="add-on"><i class="icon-pencil" ></i></span>
+								<p:inputText id="email" style="width: 480px;" >
+									<f:validateRequired />
+								</p:inputText>
+								<p:watermark for="email" value="Email" ></p:watermark>
+							</div>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="controls">
+							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
+								<span class="add-on"><i class="icon-pencil" ></i></span>
+								<p:inputText id="password" style="width: 480px;" >
+									<f:validateRequired />
+								</p:inputText>
+								<p:watermark for="password" value="Password" ></p:watermark>
+							</div>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="controls">
+							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
+								<span class="add-on"><i class="icon-pencil" ></i></span>
+								<p:inputText id="confirmpassword" style="width: 480px;" >
+									<f:validateRequired />
+								</p:inputText>
+								<p:watermark for="confirmpassword" value="Confirm Password" ></p:watermark>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-
-			<!-- Contact Us -->
-			<div class="contact-us container">
-				<div class="row">
-					<div class="controls">
-						<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
-							<span class="add-on"><i class="icon-pencil" ></i></span>
-							<p:inputText id="username" style="width: 480px;" >
-								<f:validateRequired />
-							</p:inputText>
-							<p:watermark for="username" value="Username" ></p:watermark>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="controls">
-						<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
-							<span class="add-on"><i class="icon-pencil" ></i></span>
-							<p:inputText id="email" style="width: 480px;" >
-								<f:validateRequired />
-							</p:inputText>
-							<p:watermark for="email" value="Email" ></p:watermark>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="controls">
-						<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
-							<span class="add-on"><i class="icon-pencil" ></i></span>
-							<p:inputText id="password" style="width: 480px;" >
-								<f:validateRequired />
-							</p:inputText>
-							<p:watermark for="password" value="Password" ></p:watermark>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="controls">
-						<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
-							<span class="add-on"><i class="icon-pencil" ></i></span>
-							<p:inputText id="confirmpassword" style="width: 480px;" >
-								<f:validateRequired />
-							</p:inputText>
-							<p:watermark for="confirmpassword" value="Confirm Password" ></p:watermark>
-						</div>
-					</div>
-				</div>
-			</div>
-
+			</ui:remove>
 		</ui:define>
     </ui:composition>
 </html>
