--- a/src/main/webapp/board.xhtml
+++ b/src/main/webapp/board.xhtml
@@ -34,59 +34,7 @@
 		</div>
 	</ui:define>
 	<ui:define name="content">
-		<style type="text/css">
-			.ui-panel {
-				padding: 0.0em;
-			}
-			.ui-panel .ui-panel-content {
-				padding-left: 4px;
-				text-align: left;
-			}
-			.ui-panel .ui-panel-footer {
-				padding: 0.2em 0.4em;
-			}
-			.ui-panel .ui-panel-titlebar {
-				padding: 0.2em 0em 0.2em;
-			}
-			.ui-corner-all {
-				-moz-border-radius: 0px;
-				-webkit-border-radius: 0px;
-				border-radius: 0px;
-			}
-			.ui-widget-header {
-				text-align: left;
-			}
-			.ui-panel-title {
-				padding-left: 4px;
-			}
-			.ui-panel, div.ui-state-hover {
-				width : 98%;
-				margin-bottom: 10px;
-			}
-			.ui-dashboard-column {
-				width :25%;
-			}
-			.ui-dashboard-header {
-				width :25%;
-			}
-			pre {
-				display: block;
-				padding: 0px;
-				margin: 0 0 0px;
-				font-size: 11px;
-				line-height: 24px;
-				word-break: break-all;
-				word-wrap: break-word;
-				white-space: pre;
-				white-space: pre-wrap;
-				background-color: white;
-				border: 0px solid #ccc;
-				border: 0px solid rgba(0, 0, 0, 0.15);
-				-webkit-border-radius: 0px;
-				-moz-border-radius: 0px;
-				border-radius: 0px;
-			}
-		</style>
+		<ui:include src="/WEB-INF/include/boardstyle.xhtml" />
 
 		<p:messages id="messages" showDetail="true" />
 		<p:remoteCommand id="refreshcmd" action="#{board.refresh}" name="refresh"
