--- a/src/main/webapp/signin.xhtml
+++ b/src/main/webapp/signin.xhtml
@@ -12,7 +12,7 @@
 				<div class="controls span6">
 					<div class="input-prepend">
 						<span class="add-on" ><i class="icon-user" style="float: right"></i></span>
-						<p:inputText id="username" value="#{signinManaged.username}" maxlength="64"
+						<p:inputText id="username" value="#{signin.username}" maxlength="64"
 									 required="true" requiredMessage="Username cannot blank."  />
 						<p:watermark for="username" value="Username" />
 					</div>
@@ -26,7 +26,7 @@
 				<div class="controls span6">
 					<div class="input-prepend" >
 						<span class="add-on"><i class="icon-stop"></i></span>
-						<p:password id="password" value="#{signinManaged.password}" maxlength="64"
+						<p:password id="password" value="#{signin.password}" maxlength="64"
 									required="true" requiredMessage="Password cannot blank."  />
 						<p:watermark for="password" value="Password" />
 					</div>
@@ -40,7 +40,7 @@
 				<div class="controls span6">
 					<p:commandButton id="signin" value="SIGNIN" ajax="false"
 									 styleClass="btn btn-success btn-mini"
-									 action="#{signinManaged.authen}" update="form" />
+									 action="#{signin.authen}" update="form" />
 				</div>
 			</div>
 			<div class="row">
