Update Primefaces & Login via Servlet

--- a/src/main/webapp/admin/home.xhtml
+++ b/src/main/webapp/admin/home.xhtml
@@ -2,7 +2,7 @@
 				xmlns="http://www.w3.org/1999/xhtml"
 				xmlns:ui ="http://java.sun.com/jsf/facelets"
 
-	<ui:define name="content">
-		HOME
+				<ui:define name="content">
+		HOME ADMIN
 	</ui:define>
 </ui:composition>
